force standard height for postgrid elements so we don't get weird spacing issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,6 +201,7 @@ ul#thenavbar li.searchbox input{
 
 #postgrid .content-preview{
     color: #fff;
+    height: 200px;
     background-color: #333;
     padding: 10px;
     font-weight: 300;
